# AutoDiCE

./: .gitignore  1.txt  CMakeLists.txt  LICENSE  README.md  install_dependencies.sh  tutorial.md
cmake/: ncnnConfig.cmake.in  ncnn_add_layer.cmake
examples/: .CMakeLists.txt.swp  CMakeLists.txt  alexnet.cpp  bench.cpp  bench_multinode.cpp  gen_models.py  hello.c  hello.cpp  multinode.cpp  old.cpp  resnet.cpp  retinaface.cpp  squeezenetxt.cpp  very.cpp  vitb16.cpp
src/: .cpu.cpp.swp  CMakeLists.txt  Makefile  allocator.cpp  allocator.h  gpu.cpp  gpu.h  layer.cpp  layer.h  mat.cpp  mat.h  modelbin.h  net.cpp  net.h  option.h  pipeline.h  platform.h.in
src/layer/: .receiver.cpp.swp  convolution.h  convolutiondepthwise.h  hsplit.cpp  hsplit.h  innerproduct.h  mylayer.cpp  mylayer.h  quantize.h  receiver.cpp  receiver.h  selu.cpp  sender.cpp  sender.h
src/layer/arm/: hsplit_arm.cpp  hsplit_arm.h
src/layer/cuda/: convolutiondepthwise_cuda.h  pooling_cuda.h
tests/: CMakeLists.txt  test_mylayer.cpp  test_receiver.cpp  test_sender.cpp
toolchains/: aarch64-linux-gnu.toolchain.cmake  tx2.toolchain.cmake
tools/caffe/: CMakeLists.txt
tools/distributed/: partition.ipynb
tools/distributed/horizontal/: CodeGen.py  data_json.py  horizontal partition tutorial.ipynb  interface.py  onnx_split.py
tools/distributed/horizontal/.ipynb_checkpoints/: horizontal partition tutorial-checkpoint.ipynb
tools/distributed/vertical/: 2mapping.json  3mapping.json  Untitled.ipynb  hmapping.json  horizontal.json  interface.py  mapping.ipynb  mapping.json  onnx2ncnn  onnx_bench.py  onnx_ncnn.py  onnx_split.py  platform.txt  run.sh  trans.sh  vertical partition tutorial.ipynb  vertical.json
tools/onnx/: onnx2ncnn.cpp
tools/pnnx/: CMakeLists.txt
